--- a/testngPractice/test-output/emailable-report.html
+++ b/testngPractice/test-output/emailable-report.html
@@ -9,16 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">1,916</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">27,615</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.practice.DataProviderExcel</td><td><a href="#m0">searchTest</a></td><td rowspan="1">1742918052628</td><td rowspan="1">1823</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">com.practice.DataProviderExcel</td><td><a href="#m0">search</a></td><td rowspan="5">1742947061422</td><td rowspan="5">9028</td></tr><tr class="passedeven"><td><a href="#m1">search</a></td></tr><tr class="passedeven"><td><a href="#m2">search</a></td></tr><tr class="passedeven"><td><a href="#m3">search</a></td></tr><tr class="passedeven"><td><a href="#m4">search</a></td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.practice.DataProviderExcel#searchTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.internal.reflect.MethodMatcherException: 
-[public void com.practice.DataProviderExcel.searchTest(java.lang.String)] has no parameters defined but was found to be using a data provider (either explicitly specified or inherited from class level annotation).
-Data provider mismatch
-Method: searchTest([java.lang.String arg0])
-Arguments: [(java.lang.String) Course1,(java.lang.String) HR]
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 22 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.practice.DataProviderExcel#search</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Course2</td><td>DEVELOPER</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.practice.DataProviderExcel#search</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Course4</td><td>ANALYST</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.practice.DataProviderExcel#search</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Course1</td><td>HR</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.practice.DataProviderExcel#search</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Course3</td><td>TESTER</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.practice.DataProviderExcel#search</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Course5</td><td>DESIGNER</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
